test/library/standard/IO/readNeedsIO.good
readNeedsIO.chpl:3: error: read() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:4: error: read() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:5: error: read() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:6: error: readln() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:7: error: readln() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:8: error: readln() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:9: error: readln() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:10: error: readline() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:11: error: readline() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:12: error: readf() is not available by default; try 'use IO;' or 'import IO;'
readNeedsIO.chpl:13: error: readf() is not available by default; try 'use IO;' or 'import IO;'
