test/library/standard/IO/readNeedsIO.chpl
var x, y, z: int;
var b: [1..1000] uint(8);
read(x, y, z);
read(int);
read(int, real, string);
readln();
readln(x, y, z);
readln(int);
readln(int, real, string);
readline(b, x);
readline(x);
readf("%i %i", x, y);
readf("hi");

